fix(single word): learn more link spacing top

--- a/assets/styles/components/_single-word.scss
+++ b/assets/styles/components/_single-word.scss
@@ -141,7 +141,6 @@
 			display: flex;
 			align-items: center;
 			gap: vars.$spacer * 0.5;
-			margin-top: vars.$spacer * 1.5;
 		}
 
 		&-link {
